src/assets/app-style.scss
$red:#FF0000;
$orange: #ffb300;
$greener:#00FF00;
$green:#00FF95;
$blue:#0099FF;
$cyan: #00FFFF;
$magenta: #FF00FF; 
$yellow: #FFFF00;
$gray: #888888;
$background: #191919;

$pct8: #00DE12;
$pct7: #42D100;
$pct6: #5BD100;
$pct5: #99D100;
$pct4: #B2D100;
$pct3: #D1B900;
$pct2: #D16200;
$pct1: #D13F00;

$text-input: #efefef;

$font-primary: 'IBM Plex Mono';

$width: 100%; // height: 300;
$height: 100%;

.csl-red {
    color: $red;
}

.csl-orange {
    color: $orange;
}

.csl-green {
    color: $green;
}

.csl-greener {
    color: $greener;
}


.csl-blue {
    color: $blue;
}


.csl-magenta {
    color: $magenta;
}

.csl-yellow {
    color: $yellow;
}

.csl-gray {
    color: $gray;
}

.csl-pct-8 {
    color: $pct8;
}

.csl-pct-7 {
    color: $pct7;
}

.csl-pct-6 {
    color: $pct6;
}

.csl-pct-5 {
    color: $pct5;
}

.csl-pct-4 {
    color: $pct4;
}

.csl-pct-3 {
    color: $pct3;
}

.csl-pct-2 {
    color: $pct2;
}

.csl-pct-1 {
    color: $pct1;
}

html {
    box-sizing: border-box;
    height: $height;
    overflow: hidden;
    background-color: $background;
}

body {
    height: $height;
    overflow: hidden;
}

*, *:before, *:after {
    box-sizing: inherit;
    font-family: 'Courier New', monospace;
    font-weight: normal;
    font-size: 14px;
    color: $text-input;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
}

ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}
  
li {
    display: block;
    margin: 0;
    padding: 0;
}

input {
    padding: 0;
    margin: 0;
    border: none;
    outline: none;
    background: none;
}


%flex-row {
    display: flex;
    flex-direction: row wrap;
}

.flex-row-center {
    @extend %flex-row;
}

.flex-col {
    display: flex;
    flex-flow: column;
    flex-shrink: 0;
}

.flex-center {
    display: flex;
    justify-content: center;
}

#app {
    display: outside;
    width: $width;
    height: $height;
}

.term {
    flex: 0 1 $width;
    height: $height;
    width: $width;
    overflow-y: scroll;

}

.screen {
    flex: auto;
    background-color: $background;
    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
    width: $width;
    padding: 0 10px;
}

.prompt-icon {
    color: $green;
    margin-right: 5px;
}

.entry,
#prompt {
    //padding: 3px 4px;
    width: $width;

    input {
        width: $width;
    }

    &.input-row {
        margin: 5px 0;
    }
}

a {
    color: $cyan;
}

.entry-text {
    display: inline-block;
}

